// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for GifGrid component should change the snapshot when useFetchGifs is executed 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInRight"
  >
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;

exports[`Tests for GifGrid component should show the correct component and match with the snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInRight"
  >
    Goku
  </h3>
  <p
    className="loading animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
